# HTMLskill

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FINAL_SUMMARY.md  OPTIMIZATION_REPORT.md  OPTIMIZATION_SUMMARY.md  PROGRESS.md  PROJECT_SUMMARY.md  README.md  README.zh.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  examples.yml  release.yml
docs/: MARKETING_GUIDE.md  README.md  api-reference.md  best-practices.md  comparison.md  faq.md  getting-started.md
examples/: 00-minimal.py  01-landing-page.py  02-complete-landing.py  03-render-to-html.py  04-complete-with-output.py  05-product-landing.py  06-blog-post.py  07-portfolio.py  README.md  generate_all.py
htmlskill/: __init__.py
htmlskill/api/: __init__.py  context.py  decorators.py  registry.py
htmlskill/cli/: __init__.py  main.py
htmlskill/components/: __init__.py  basic.py  composite.py  layout.py
htmlskill/design/: __init__.py  constraints.py
htmlskill/renderers/: __init__.py  base.py  web.py
htmlskill/templates/: web-prototype.html
tests/: test_api.py  test_cli.py  test_composite.py  test_constraints.py  test_context.py  test_layout.py  test_renderers.py
